# io42io3

./: .gitignore  README.txt  compile.bat  compile.sh  io42io3.example_kca.ini  io42io3.example_kf3.ini  meson.build
io42io3/: config.c  config.h  exports.def  io4.c  io4.h  io42io3.c  io42io3.h  meson.build
io42io3/games/: kca.c  kca.h  kemono.c  kemono.h
io42io3/util/: dprintf.c
subprojects/: segapi.wrap
